# drogon_tinykvm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  batch_measure.sh  measure  measure.cpp  measure.sh  results.txt  run.sh  snapshot_and_measure.sh  tenants.json
program/: build.sh  deno.sh  hello_world  hello_world.cpp  hello_world_storage.cpp  kvm_api.h  libdrogon.c  libdrogon_storage.c  symbol_offset  zpizza
program/bun/: index.ts
program/deno/: main.ts  storage.ts
program/node/: main.js
program/storage_program/src/: main.rs
src/: compute.cpp  main.cpp  settings.hpp
src/sandbox/: CMakeLists.txt  curl_fetch.cpp  curl_fetch.hpp  kvm_backend.h  kvm_stats.cpp  live_update.cpp  live_update.hpp  machine_debug.cpp  machine_instance.cpp  machine_instance.hpp  machine_stats.hpp  program_instance.cpp  program_instance.hpp  reservation.hpp  self_request.cpp  serialized_state.hpp  settings.hpp  system_calls.cpp  system_calls_api.cpp  system_calls_fetch.cpp  system_calls_http.cpp  tenant.cpp  tenant.hpp  tenant_instance.cpp  tenant_instance.hpp  tenants.hpp  time_format.hpp
src/sandbox/server/: epoll.cpp  epoll.hpp
